--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
@@ -10,7 +10,7 @@ body {
   display: none;
   z-index: 0;
 }
-body.menuShowing {
+body.menuShowing,body.body_sidebarScroll {
   overflow: hidden !important;
 }
 .subCategory ul {
