--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -210,6 +210,7 @@ data.previousAppsSection = ""; // The section the user is on within previous app
 data.searchInProgress = false;
 data.deprecated = false; // Only set by reinstalling a deprecated plugin
 data.loggedOut = false; // flag to prevent a second alert from popping up if you wind up being logged out due to a fatal error
+data.ignoreUnload = false;
 
 var dockerNotEnabled;
 var postCount = 0;
@@ -358,7 +359,8 @@ $(function(){
   }, 300);
 
   const resizeDebouncedOrientationHandler = resizeDebounce(function() {
-    saveState();
+    saveState(false);
+    data.ignoreUnload = true;
     window.location.replace("/Apps/Apps");
   }, 100);
 
@@ -2305,6 +2307,9 @@ function updateDisplay(content) {
   myCloseAlert(true);
 }
 window.onbeforeunload = function() {
+  if ( data.ignoreUnload ) {
+    return;
+  }
   saveState(false);
 }
 function saveState(legacy=true) {
@@ -2342,6 +2347,7 @@ function restoreState() {
   $.removeCookie("ca_categoryText");
   try {
     data = JSON.parse($.cookie("ca_data"));
+    data.ignoreUnload = false;
     $.removeCookie("ca_data");
   } catch (e) {
     console.log("Unable to restore state - reloading to clear errors");
@@ -2893,6 +2899,8 @@ function popUpChart(descData) {
 }
 
 function showSidebarApp(apppath,appname) {
+  $(".screenshot").remove();
+
   disableSearch();
   clearTimeout(iconHoverTimer);
   $.cookie("sidebarAppPath",apppath,{path:"/;SameSite=Lax"});
@@ -2936,8 +2944,8 @@ function showSidebarApp(apppath,appname) {
           },
           close: function() {
             dimScreen(false);
-            $('body').removeClass("mfp-zoom-out-cur").addClass("body_sidebarScroll");
-            showSidebarApp(data.sidebarapppath,data.sidebarappname);
+            $('body').addClass("body_sidebarScroll");
+            setTimeout(function() {showSidebarApp(data.sidebarapppath,data.sidebarappname);},250);
           }
         }
       });
